bad/assign_binop_cnne_class_down.example_compiler_output
ERROR
[1mbad/assign_binop_cnne_class_down.lat:7:12: [1;31merror: [0;1mleft side is not assignable[m
	x != null = new X;
	          [1;32m^[m
[1mbad/assign_binop_cnne_class_down.lat:7:2: [1;34mnote: [0;1mleft side starts here[m
	x != null = new X;
	[1;32m^[m
